--- a/branding.html
+++ b/branding.html
@@ -298,7 +298,7 @@
             </div>
             <div class="row">
               <div class="col-12 col-md-4">
-                <div class="custom-case-card card" style="width: 100%;border-radius: 10px; position: sticky;top: 110px;">
+                <div class="custom-case-card card" style="border-radius: 10px; position: sticky;top: 110px;">
                   <img src="assets/images/dm-dummy.webp" alt="" class="w-100" style="height: 100% !important;">
                   
                 </div>
