--- a/branding.html
+++ b/branding.html
@@ -384,7 +384,7 @@
             </div>
             <div class="row">
               <div class="col-12 col-md-6 col-lg-4">
-                <div class="custom-case-card card" style="width: 100%;border-radius: 10px;margin-top: 20px;">
+                <div class="custom-case-card card" style="border-radius: 10px;margin-top: 20px;">
                   <img src="assets/images/dm-dummy.webp" alt="" class="w-100">
                   <div class="card-body custom-case-card-body">
                     <h3><a href="">Designing</a></h3>
@@ -395,7 +395,7 @@
                 </div>
               </div>
               <div class="col-12 col-md-6 col-lg-4">
-                <div class="custom-case-card card" style="width: 100%;border-radius: 10px;margin-top: 20px;">
+                <div class="custom-case-card card" style="border-radius: 10px;margin-top: 20px;">
                   <img src="assets/images/dm-dummy.webp" alt="" class="w-100">
                   <div class="card-body custom-case-card-body">
                     <h3><a href="">Designing</a></h3>
@@ -406,7 +406,7 @@
                 </div>
               </div>
               <div class="col-12 col-md-6 col-lg-4">
-                <div class="custom-case-card card" style="width: 100%;border-radius: 10px;margin-top: 20px;">
+                <div class="custom-case-card card" style="border-radius: 10px;margin-top: 20px;">
                   <img src="assets/images/dm-dummy.webp" alt="" class="w-100">
                   <div class="card-body custom-case-card-body">
                     <h3><a href="">Designing</a></h3>
